# scrapp_backend

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  go.mod  go.sum  main.go
controllers/: users.go
docs/: docs.go  swagger.json  swagger.yaml
models/: accounts.go  models.go  users.go
routes/: users.go
schemas/: users.go
src/: main.rs
src/handlers/: hello.rs
src/routes/: hello.rs  mod.rs
