[package]
name = "scrapp_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
